--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-coverage>=6.4.1
-flake8>=4.0.1
-jax>=0.3.13
-numpy>=1.22.4
-optax>=0.1.2
-pytest>=7.1.2
-scipy>=1.8.1
-statsmodels>=0.13.2
+coverage
+flake8
+jax
+numpy
+optax
+pytest
+scipy
+statsmodels
