minor fixes to typing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,6 @@ defineConstant = { DEBUG = false }
 reportMissingImports = true
 reportMissingTypeStubs = false
 reportGeneralTypeIssues = false
+
+[tool.mypy]
+enable_recursive_aliases = true
