--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,10 @@ reportGeneralTypeIssues = false
 
 [tool.mypy]
 enable_recursive_aliases = true
+
+
+[tool.flake8]
+ignore = ['N803', 'N806', 'N802']
+max-line-length = 59
+max-complexity = 21
+docstring-convention = 'numpy'
